# stersh

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  agentdb.rvf  docker-compose.override.yml  docker-compose.yml  health_check.sh  lefthook.yml  package-lock.json  package.json  pnpm-workspace.yaml  setup.sh  smoke_test.sh  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
android/: settings.gradle.kts  stersh-release.jks
backend/: .env.example  .gitignore  Dockerfile  ads.py  analytics.py  analytics_summary.py  auth.py  black.py  black_routes.py  cache.py  cdn_middleware.py  config.py  continue_watching.py  database.py  db_stats.py  docker-compose.yml  ffmpeg_routes.py  ffmpeg_utils.py  gzip_middleware.py  hls_parser.py  main.py  metrics.py  parental_controls.py  performance.py  pink.py  pink_routes.py  pkg_shim.py  proxy_routes.py  rate_limiting.py  redis_utils.py  requirements-test.txt  requirements.txt  routes.py  run.py  security_headers.py  service_status.py  setup_dev_db.py  shutdown.py  ssrf.py  startup_tasks.py  (+7 more)
backend/services/streaming/: Dockerfile  pyproject.toml
backend/services/streaming/app/: ffmpeg_routes.py  ffmpeg_utils.py  hls_parser.py  main.py  subtitles.py  white.py  white_routes.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  astro.config.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-workspace.yaml  setup.sh  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  tsconfig.json  tsconfig.svelte-check.json  vite.config.ts  vitest.config.ts
(+307 files in other folders)
