[tool.poetry]
name = "watchfy-extractor"
version = "0.1.0"
description = "Watch!fy video extractor service"
authors = ["Watch!fy Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
httpx = "^0.27.0"
playwright = "^1.42.0"
cachetools = "^5.3.0"
python-dotenv = "^1.0.0"
ffmpeg-python = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
